PlzNavigate: fix regression on the FYI bot.

It fixes a regression introduced in crrev.com/2563423004 for the
FYI bot: "Browser Side Navigation Linux".
It happens with Failed navigation within <object data=...>.
m_progressTracker->progressCompleted() lines were removed by the
previous commit and further call to it didn't happen with PlzNavigate.
It leads to a timeout in a few tests.

Tests fixed:
- virtual/spv2/fast/overflow/overflow-height-float-not-removed-crash3.html
- fast/css/acid2-pixel.html
- fast/dom/HTMLObjectElement/children-changed.html
- imported/wpt/html/semantics/embedded-content/the-object-element/object-attributes.html
- fast/overflow/overflow-height-float-not-removed-crash2.html
- fast/table/giantCellspacing.html
- fast/overflow/overflow-height-float-not-removed-crash.html
- fast/overflow/overflow-height-float-not-removed-crash3.html
- fast/css/acid2.html

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_chromium_browser_side_navigation_rel

BUG=679675

Review-Url: https://codereview.chromium.org/2624723002
Cr-Commit-Position: refs/heads/master@{#445997}

Former-commit-id: 68693ab02e29631f4b484299fab89a66c768b01f